<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/update_bg"
    android:orientation="vertical"
    android:paddingTop="25dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="164dp"
        android:text="@string/update_title"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/update_title" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/update_tip"
        android:textColor="@color/color_333333"
        android:textSize="16sp"
        tools:text="@string/update_tip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/CommonButtonStyle"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/later"
            android:textSize="18sp"
            android:theme="@style/CommonButtonTheme.Gray"
            android:visibility="visible"/>

        <Button
            android:id="@+id/okk"
            style="@style/CommonButtonStyle"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:textSize="18sp"
            android:theme="@style/CommonButtonTheme"
            android:visibility="gone"/>

        <Button
            android:id="@+id/ok"
            style="@style/CommonButtonStyle"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/update_now"
            android:textSize="18sp"
            android:theme="@style/CommonButtonTheme" />


    </LinearLayout>
</LinearLayout>