<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xpopup_round_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/logout" />


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="27dp"
        android:gravity="center"
        android:text="@string/logouttip"
        android:textColor="@color/color_363636"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logout"
            style="@style/CommonButtonStyle"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:text="@string/log_out"
            android:textSize="16sp"
            android:theme="@style/CommonButtonTheme" />

        <Button
            android:id="@+id/cancel"
            style="@style/CommonButtonStyle"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:theme="@style/CommonButtonTheme.Gray" />

    </LinearLayout>
</LinearLayout>

